[GEOT-7003] Image mosaic: allow harvesting from COG URIs (e.g., gsutil style gs://bucket/name)